--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ pinocchio-associated-token-account = "0.3.0"
 pinocchio-pubkey = "0.3.0"
 pinocchio-system = "0.5.0"
 pinocchio-token = "0.5.0"
+shank = "0.4.6"
 solana-program-log = "1.1.0"
 spl-associated-token-account-interface = "2.0.0"
 
